Fix overflow issues

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@
 html,
 body {
   max-height: 100%;
-  overflow-y: hidden;
+  overflow-y: visible;
   animation-duration: 1.5s;
   animation-timing-function: linear;
   animation-direction: normal;
@@ -254,6 +254,7 @@ footer {
   min-width: 100%;
   height: 100%;
   min-height: 100%;
+  overflow: hidden;
 
   span {
     background-color: rgba(0,32,63,1);
@@ -321,12 +322,12 @@ html:active *::after {
 
 @keyframes height {
   0% {
-    overflow-y: hidden;
     max-height: 100%;
+    overflow-y: visible;
   }
   100% {
-    overflow-y: visible;
     max-height: none;
+    overflow-y: visible;
   }
 }
 
